--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,13 @@
   font-family: "JetBrainsMono-Medium";
 }
 
+.divider {
+  border: none;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 1);
+  margin: 20px 0;
+}
+
 .rbnav:hover {
   box-shadow: 0px 10px 5px -5px rgba(0, 0, 0, 0.2);
 }
@@ -25,7 +32,7 @@
   box-shadow: 0px 10px 5px -5px rgba(0, 0, 0, 0.2);
 }
 
-.portrait-panel {
+.portrait-panel, .modifier-textarea {
   margin-bottom: 15px;
 }
 
@@ -65,14 +72,33 @@
   margin-top: 20px;
 }
 
-.vote {
+.float-post {
   position: fixed;
   bottom: 10%;
   right: 5%;
-  width: 84px;
+  width: 266px;
   height: 58px;
   background-color: white;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 10px;
+}
+
+.float-submit {
+  position: fixed;
+  bottom: 10%;
+  right: 5%;
+  width: 105px;
+  height: 58px;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.p404-panel {
+  display: flex;
+  align-items: center;
+  margin-left: 2.5%;
+  height: 50vh;
 }
