--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,8 +24,7 @@
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0%);
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin: 15px 0
 }
 
 .main-panel:hover {
@@ -74,7 +73,7 @@
 
 .float-post {
   position: fixed;
-  bottom: 10%;
+  top: 15%;
   right: 5%;
   width: 266px;
   height: 58px;
@@ -94,6 +93,13 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 10px;
+}
+.comment-row {
+  width: 95%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  margin-bottom: 15px;
 }
 
 .p404-panel {
