--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,9 @@
 #root {
   font-family: "JetBrainsMono-Medium";
 }
-
+body {
+  background-color: #deeff5;
+}
 .divider {
   border: none;
   height: 1px;
@@ -51,7 +53,9 @@
   font-size: small;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
-
+.post {
+  background-color: #deeff5;
+}
 .post-title {
   font-size: large;
   font-weight: bold;
@@ -77,7 +81,7 @@
   right: 5%;
   width: 232px;
   height: 58px;
-  background-color: white;
+  background-color: #deeff5;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 10px;
@@ -89,7 +93,7 @@
   right: 5%;
   width: 66px;
   height: 58px;
-  background-color: white;
+  background-color: #deeff5;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 10px;
